# WorkflowBuilder

./: .gitignore  README.md  docker-compose.yml  setup.sh
.copier/: .copier-answers.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: crud.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 9f42b451478e_adding_workflow_and_steps.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  users.py  workflows.py
backend/app/api/v1/: dependencies.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  db.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: user.py
backend/app/models/: __init__.py  items.py  users.py  utils.py  workflow_steps.py  workflows.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/utils/: item.py  user.py
backend/tests/: test_auth.py
frontend/: Dockerfile  package-lock.json  package.json
